style(ui): update style for chrome alignment issue [EV-24800] (#14338) (#14340)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2566,6 +2566,7 @@ div[class*='_pendo'] button {
   font-weight: 600;
   width: 100%;
   margin-bottom: 10px;
+  padding: 0 !important;
 }
 .ant-modal-confirm-custom-styled .ant-modal-confirm-btns {
   border: none;
